# pytis

./: .actrc  .gitignore  .travis.yml  AUTHORS  BUGFIXES  ChangeLog  ChangeLog.1  ChangeLog.lib.2  ChangeLog.lib.3  ChangeLog.lib.4  INSTALL  ISSUE_TEMPLATE.md  Makefile  NEWS  README  TODO  TODO.org  conftest.py  install.md  pyproject.toml  pytest.ini  pytis-demo-config.py  readme.md  recreate-pytis-demo-db.sh  requirements-devel.txt  requirements-pytis-demo.txt  requirements-rest-api-devel.txt  requirements.txt  setup.py
.githooks/: pre-commit
config/: config.py
db/: cms.sql  db_common.py  db_output.py  db_pytis_cms.py  db_pytis_config.py  db_pytis_crypto.py  db_pytis_crypto_basic.py  db_pytis_help.py  db_pytis_http_attachment_storage.py  db_pytis_logging.py  db_pytis_menu.py  db_statistics.py  gensql.py
db-archiv/: db_pytis_cms.py  db_pytis_cms_user.py  db_pytis_config.py  db_pytis_crypto.py  db_pytis_help.py  db_statistics.py  gensql.py  system.sql
defs/: menu.py  printing.py  profiles.py  statistics.py
demo/: script.py
doc/: Pytis.wiki  napoveda.wiki  todo
help/: README
icons/: README.txt
javascript/: pytis-ckeditor.js  pytis.js
lib/: ChangeLog  ChangeLog.1  pytis
pytis/: __init__.py  run.py
tools/: checkapp  config-converter.py  config-updater.py  convert-field-type-specifications.py  crypto  dbdefscheck  dbrename.py  dmp  dump-compare.el  dump-recursive-computers.py  dump-search.py  dump-specifications.py  dump-subset.py  find-prints.sh  flake8.default  flake8.noredef  form-profile-validator.py  form-profile-viewer.py  genconfig.py  genmenu.py  gensql.py  gensqlalchemy.el  gsql-migrate.py  gsql.py  help-generator.py  help-updater.py  make-tags.sh  modify-specifications.py  pdmchecker.sh  python26.el  pytis-transform.el  specinfo  specinfo.el  tzcheck  viewsreview  x2go-ping.py
translations/: Makefile  babel.cfg  pytis-data.cs.po  pytis-data.de.po  pytis-data.es.po  pytis-data.fr.po  pytis-data.hu.po  pytis-data.pl.po  pytis-data.sk.po  pytis-defs.cs.po  pytis-demo.cs.po  pytis-web.cs.po  pytis-web.de.po  pytis-web.es.po  pytis-web.fr.po  pytis-web.hu.po  pytis-web.pl.po  pytis-web.sk.po  pytis-wx.cs.po  (+9 more)
(+433 files in other folders)
